Login/Register working? Need to setup other pages to a basic degree.

--- a/QualitySouvenirs/QualitySouvenirs.csproj
+++ b/QualitySouvenirs/QualitySouvenirs.csproj
@@ -16,19 +16,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Account\" />
     <Folder Include="Views\Admin\" />
     <Folder Include="Views\Manage\" />
-    <Folder Include="Views\Orders\" />
     <Folder Include="Views\ShoppingCart\" />
     <Folder Include="Views\Supplier\" />
   </ItemGroup>
