Setting up ShoppingCart

--- a/QualitySouvenirs/appsettings.json
+++ b/QualitySouvenirs/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-QualitySouvenirs;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=dochyper.unitec.ac.nz;Database=achars05sqlserver3;user id=achars05;password=18021998;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
